# gbe-sentinel

./: .gitignore  AGENTS.md  CHECKPOINT.md  Cargo.toml
crates/sentinel/: Cargo.toml
crates/sentinel/src/: claim.rs  config.rs  error.rs  handler.rs  health.rs  lib.rs  sentinel.rs
crates/sentinel/src/vm/: config.rs  lifecycle.rs  manager.rs  mod.rs  network.rs  overlay.rs
crates/sentinel/src/vsock/: listener.rs  mod.rs  protocol.rs  proxy.rs
docs/design/: naming-themes.md  sentinel-architecture.md  vm-sandbox-research.md
