[package]
name = "gbe-sentinel"
description = "Per-host VM lifecycle manager for GBE task execution"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
gbe-nexus.workspace = true
gbe-state-store.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
async-trait.workspace = true
gbe-nexus-redis = { path = "../../../gbe-nexus/crates/nexus-redis" }
gbe-state-store-redis = { path = "../../../gbe-nexus/crates/state-store-redis" }
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
